...
import { LinearGradient } from "expo-linear-gradient";
import images from "../../assets/images/images";
import {
  Users,
  MapPin,
  Building2,
  Search,
  ChevronRight,
} from "lucide-react-native";

const { width } = Dimensions.get("window");
const cardWidth = width * 0.85;

...
            </Text>
            <Text className="text-white/80 font-dsregular text-sm mb-3">
              {item.description}
            </Text>
            <View className="bg-white/30 w-24 py-1 px-3 rounded-full flex-row items-center justify-center">
              <Text className="text-white font-dsmedium text-xs mr-1">
                Explore
              </Text>
              <ChevronRight size={14} color="white" />
            </View>
          </View>
        </View>
        <View className="w-1/3 justify-center items-center">
...
