...
            start={{ x: 0, y: 1 }}
            end={{ x: 1, y: 1 }}
            className="mt-2"
            style={{ width: 150, height: 50, borderRadius: 10, justifyContent: 'center', alignItems: 'center'}}
          >
              
            <Text className="font-dsbold text-white text-2xl">Book Now</Text>
          </LinearGradient>
        
        </TouchableOpacity>
      </View>


...
